Refactor interface definition